# ecb-news-volatility-forecasting

./: .gitignore  AUDIT.md  CITATION.cff  LICENSE  Makefile  README.md  REPRODUCIBILITY.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.toml
data/: README.md
data/processed/: model_data_master.csv
legacy/: FILE_INVENTORY.md  ORIGINAL_README.md  README.md
legacy/original_scripts/: 01a_download_market_data.py  01b_download_controls.py  02_ecb_collection.py  03a_score_sentences.py  03b_merge_sources.py  04a_build_daily_series.py  04b_diagnostics.py  05a_prepare_master_dataset.py  05b_estimate_in_sample.py  05c_evaluate.py  05d_extract_surprises_bernoth.py  06_make_report_artifacts.py  forecast_oos.py  models.py  run_main_pipeline.py
notebooks/: README.md
reports/: README.md  final_results_summary.txt
reports/compiled/: tables.tex  tables_body.tex
reports/tables/: final_economic_significance.csv  final_forecast_combination.csv  final_in_sample_appendix.csv  final_in_sample_appendix_bernoth.csv  final_in_sample_main.csv  final_in_sample_params.csv  final_in_sample_robust.csv  final_oos_absreturn.csv  final_oos_dm.csv  final_oos_main.csv  final_oos_mcs.csv  final_oos_subsample.csv  final_residual_diagnostics.csv
scripts/: _bootstrap.py  build_data.py  estimate_models.py  forecast_oos.py  make_artifacts.py  run_legacy_results.py  run_pipeline.py  score_stance.py
tests/: conftest.py  test_config.py  test_data.py  test_forecasting.py  test_metrics.py  test_models.py  test_nlp.py
(+23 files in other folders)
