[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecb-news-volatility-forecasting"
version = "0.1.0"
description = "Out-of-sample volatility forecasting with transformer-classified ECB communication stance."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {file = "LICENSE"}
authors = [
  {name = "Alessandro De Riccardis"},
  {name = "Marie-felice Micheln"},
  {name = "Ludovica Pietrangelo"},
  {name = "Carlotta De Martino"},
]
dependencies = [
  "arch>=7.2,<9",
  "matplotlib>=3.9,<4",
  "numba>=0.61,<0.63",
  "numpy>=2.0,<3",
  "pandas>=2.2,<3",
  "scipy>=1.14,<2",
]

[project.optional-dependencies]
data = [
  "beautifulsoup4>=4.12,<5",
  "pypdf>=5,<7",
  "requests>=2.32,<3",
  "torch>=2.5,<3",
  "tqdm>=4.67,<5",
  "transformers>=4.47,<5",
  "yfinance>=0.2.50,<2",
]
dev = [
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
exclude = ["legacy"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
